# blog-posts

./: .gitignore  BLOG_STYLE.md  GEMINI.md  pty_bug_report_context.md  reproduce_issue.py
agentification/: 2026-05-14-enforcing-engineering-rigour-in-ai-agents.mdx  2026-05-14-evolution-chaos-to-orchestration.mdx
dem-format-benchmark/: .gitignore  BLOG_STYLE.md  GEMINI.md  Makefile  README.md  SKILL_FACT_CHECK.md  UBIQUITOUS_LANGUAGE.md  config.py  pyproject.toml
dem-format-benchmark/blog-preview/: mdx-components.jsx  next.config.mjs  package-lock.json  package.json
dem-format-benchmark/blog-preview/app/: globals.css  layout.jsx
dem-format-benchmark/blog-preview/app/posts/2026-05-09-dem-format-benchmark/: page.mdx
dem-format-benchmark/blog-preview/app/posts/2026-05-10-dem-format-benchmark/: page.mdx
dem-format-benchmark/blog-preview/app/posts/2026-05-12-why-vrts-fail/: page.mdx
dem-format-benchmark/blog-preview/app/posts/2026-05-14-enforcing-engineering-rigour-in-ai-agents/: page.mdx
dem-format-benchmark/blog-preview/public/: plots
dem-format-benchmark/content/: 2026-05-09-dem-format-benchmark.mdx  2026-05-10-dem-format-benchmark.mdx
dem-format-benchmark/dem_format_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dem-format-benchmark/docs/superpowers/plans/: 2026-05-12-dem-blog-rewrite-plan.md
dem-format-benchmark/docs/superpowers/specs/: 2026-05-12-dem-blog-rewrite-design.md
dem-format-benchmark/experiments/: preview.html  restructure_blog.py  run_all.sh  run_bench_viz.sh  test_chunk_overfetch.py  test_cold_start.py  test_compaction_error.py  test_duckdb_explain.py  test_equivalence.py  test_grid_id.py  test_hilbert  test_hilbert.rs  test_hilbert_py.py  test_hilbert_zarr.py  test_lance.py  test_lance_xy.py  test_overfetch.py  test_overfetch2.py  test_parquet_tuning.py  test_plotly.py  test_plotly2.py  test_polygon_parity.py  test_py_hilbert.py  test_rasterio_mt.py  test_raw_zarr.py  test_rust_rasterize  test_rust_rasterize.py  test_rust_rasterize.rs  test_thin_poly.py  test_uncompacted.py  test_uncompacted_join.py  test_xy_zonemap.py  test_zarr_compress.py  test_zarr_native.py  test_zarr_poly.py  update_blog.py
dem-format-benchmark/experiments/test_gr/: Cargo.toml
dem-format-benchmark/experiments/test_gr/src/: main.rs
dem-format-benchmark/experiments/test_s3_rust/: Cargo.toml  polys.json  transform.json
dem-format-benchmark/experiments/test_s3_rust/src/: main.rs
dem-format-benchmark/experiments/test_zarrs/: Cargo.toml
dem-format-benchmark/experiments/test_zarrs/src/: main.rs
dem-format-benchmark/results/: benchmarks.parquet  scaling.parquet
dem-format-benchmark/results/tables/: best_per_query.md  file_sizes.json  memory_under_1000mb.md  memory_under_2000mb.md  memory_under_500mb.md  raw_results.md
dem-format-benchmark/scripts/: benchmark.py  data_prep.py  generate_post.py  hilbert_plugin.py  plot_overfetch.py  plot_quantized.py  s2_plugin.py  scaling_assessment.py  validate_parity.py  visualize.py
dem-format-benchmark/scripts/polars_hilbert/: Cargo.toml
dem-format-benchmark/scripts/polars_hilbert/src/: lib.rs
dem-format-benchmark/scripts/polars_s2/: Cargo.toml  test_cover.rs
dem-format-benchmark/scripts/polars_s2/src/: lib.rs
dem-format-benchmark/scripts/zarrs_plugin/: Cargo.toml
dem-format-benchmark/scripts/zarrs_plugin/src/: lib.rs
dem-format-benchmark/templates/: blog_post.mdx.jinja2
dem-format-benchmark/tests/: test_data_prep_streaming.py
(+24 files in other folders)
