[project]
name = "dem-format-benchmark"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rasterio>=1.4",
    "rioxarray>=0.17",
    "xarray>=2024.0",
    "duckdb>=1.2",
    "polars>=1.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "h3>=4.0",
    "s2cell>=1.7",
    "memray>=1.15",
    "psutil>=6.0",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "shapely>=2.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
