[project]
name = "dem-format-benchmark"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.4",
    "rioxarray>=0.17",
    "xarray>=2024.0",
    "duckdb>=1.2",
    "polars>=1.0",
    "pandas>=2.2",
    "geopandas>=1.0",
    "h3>=4.0",
    "s2cell>=1.7",
    "memray>=1.15",
    "psutil>=6.0",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "jinja2>=3.1",
    "tqdm>=4.66",
    "shapely>=2.0",
    "pyarrow>=19.0",
    "tabulate>=0.9",
    "scipy>=1.12",
    "hilbertcurve>=2.0",
    "s2sphere>=0.2",
    "pytest>=8.0",
    "opencv-python>=4.13.0.92",
    "lance>=1.2.1",
    "lancedb>=0.30.2",
    "pylance>=6.0.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts"]
