[package]
name = "test_s3_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
euclid = "0.22.14"
geo-rasterize = "0.1.2"
geo-types = "0.7.19"
object_store = { version = "0.13", features = ["aws"] }
rayon = "1.12.0"
tokio = { version = "1", features = ["full"] }
zarrs = { version = "0.23.10", features = ["async"] }
zarrs_object_store = { version = "0.6.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
