[package]
name = "polars_hilbert"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_hilbert"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.40.0", default-features = false }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.10.0"
bytemuck = "1.20"
geo-rasterize = "0.1.2"
geo-types = "0.7.19"
euclid = "0.22.14"
