[package]
name = "polars_s2"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_s2"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.40.0", default-features = false }
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py310"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
s2 = "0.0.12"
serde = { version = "1", features = ["derive"] }
