[package]
name = "zarrs_plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
euclid = "0.22.14"
geo-rasterize = "0.1.2"
geo-types = "0.7.19"
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"] }
rayon = "1.12.0"
zarrs = "0.23.10"
zarrs_object_store = "0.6.2"
object_store = { version = "0.13.2", features = ["aws"] }
url = "2.5.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }